bug fix #34